# Autonomous-Driving-Controls

./: CMakeLists.txt  README.md  build.bat
project1_integrators/: README.md  figure_analysis.md  visualize.py
project1_integrators/include/: integrators.hpp
project1_integrators/src/: main.cpp
project1_integrators/tests/: test_integrators.cpp
project2_pid_controller/: README.md  figure_explanation.md  visualize.py
project2_pid_controller/include/: pid_controller.hpp  vehicle_plant.hpp
project2_pid_controller/src/: main.cpp
project2_pid_controller/tests/: test_pid.cpp
project3_bicycle_model/: CMakeLists.txt  README.md  figure_eight.csv  s_curve.csv  visualize.py
project3_bicycle_model/include/: bicycle_model.hpp  reference_path.hpp
project3_bicycle_model/src/: main.cpp
project3_bicycle_model/tests/: test_bicycle_model.cpp
project4_lateral_controllers/: CMakeLists.txt  PurePursuit_36kmh.csv  PurePursuit_72kmh.csv  README.md  visualize.py
project4_lateral_controllers/include/: controllers.hpp
project4_lateral_controllers/src/: main.cpp
project4_lateral_controllers/tests/: test_controllers.cpp
project5_kalman_filter/: CMakeLists.txt  README.md  visualize.py
project5_kalman_filter/include/: kalman_filter.hpp  sensor_models.hpp
project5_kalman_filter/src/: main.cpp
project5_kalman_filter/tests/: test_kalman.cpp
project6_lqr_tracker/: CMakeLists.txt  README.md  visualize.py
project6_lqr_tracker/include/: lqr_tracker.hpp  trajectory.hpp
project6_lqr_tracker/src/: main.cpp
project6_lqr_tracker/tests/: test_lqr_tracker.cpp
project7_path_planner/: CMakeLists.txt  README.md  raw_path.csv  smooth_path.csv  visualize.py
project7_path_planner/include/: astar.hpp  grid_map.hpp  spline_smoother.hpp
project7_path_planner/src/: main.cpp
project7_path_planner/tests/: test_path_planner.cpp
project8_mpc_controller/: CMakeLists.txt  README.md  urban_lqr.csv  urban_ref.csv  visualize.py
project8_mpc_controller/include/: mpc_tracker.hpp
project8_mpc_controller/src/: main.cpp
project8_mpc_controller/tests/: test_mpc_tracker.cpp
project9_av_stack/: CMakeLists.txt  README.md  visualize.py
project9_av_stack/src/: main.cpp
project9_av_stack/tests/: test_av_stack.cpp
